Make boxes look nice on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ const base = import.meta.env.BASE_URL;
     </div>
   </header>
   <main role="main">
-    <section class="px-4 py-12 pt-12 sm:py-16 lg:pt-24 max-w-screen-lg xl:max-w-screen-xl mx-auto md:flex justify-between lg:justify-around items-center bg-gradient-to-br from-indigo-600 to-indigo-700 rounded-xl shadow-xl">
+    <section class="px-4 py-12 pt-12 sm:py-16 lg:pt-24 max-w-screen-lg xl:max-w-screen-xl mx-auto md:flex justify-between lg:justify-around items-center bg-gradient-to-br from-indigo-600 to-indigo-700 sm:rounded-xl shadow-xl">
       <img class="h-52 lg:h-72 lg:ml-8 xl:ml-0 hidden sm:block" src={`${base}fe-logo.svg`} alt="Fe Programming language">
       <div class="sm:mt-14 md:ml-16 md:mt-0 max-w-3xl lg:max-w-2xl xl:max-w-3xl xl:-ml-4">
         <h2 class="text-5xl sm:text-6xl xl:text-6xl leading-none font-semibold tracking-tight text-white">The <span class="text-indigo-200">next generation</span><br> smart contract language for Ethereum</h2>
@@ -105,7 +105,7 @@ const base = import.meta.env.BASE_URL;
       </div>
     </section>
 
-    <section class="max-w-screen-lg xl:max-w-screen-xl mx-auto bg-gradient-to-br from-gray-800 to-gray-900 rounded-xl overflow-hidden shadow-xl">
+    <section class="max-w-screen-lg xl:max-w-screen-xl mx-auto bg-gradient-to-br from-gray-800 to-gray-900 sm:rounded-xl overflow-hidden shadow-xl">
       <div class="p-4 pt-12 pb-10 lg:pt-16">
         <h2 class="text-3xl font-semibold text-center tracking-tight mt-1 lg:text-4xl text-white">The next generation smart contract language.</h2>
         <p class="text-xl mx-auto max-w-3xl text-center mt-6 text-gray-300">Fe is an evolving smart contract language that strives to make EVM development safer, simpler and more fun.</p>
@@ -240,7 +240,7 @@ pub contract GuestBook uses (ctx: Ctx, mut log: Log) {"{"}
       </div>
     </section>
     <section class="max-w-screen-lg xl:max-w-screen-xl mx-auto lg:mt-8 py-8">
-      <div class="p-4 lg:p-8 py-12 bg-white rounded-xl border border-gray-100">
+      <div class="p-4 lg:p-8 py-12 bg-white sm:rounded-xl border border-gray-100">
         <h2 class="text-3xl font-bold text-center text-gray-900">Get involved</h2>
         <p class="leading-7 text-lg max-w-2xl mx-auto mt-6 text-center text-gray-600">Fe is evolving at a rapid pace. Now is a great time to get involved with the next generation smart contract language.</p>
         <div class="grid grid-cols-1 md:grid-cols-4 mt-12 gap-6">
@@ -265,7 +265,7 @@ pub contract GuestBook uses (ctx: Ctx, mut log: Log) {"{"}
     </section>
   </main>
   <footer class="mt-8 mb-4">
-    <section class="max-w-screen-lg xl:max-w-screen-xl mx-auto bg-gray-900 text-gray-200 rounded-xl py-16 pb-12 px-4 sm:px-6 md:px-8">
+    <section class="max-w-screen-lg xl:max-w-screen-xl mx-auto bg-gray-900 text-gray-200 sm:rounded-xl py-16 pb-12 px-4 sm:px-6 md:px-8">
       <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-y-10">
         <div>
           <img class="h-24" src={`${base}fe-logo.svg`} alt="Fe Programming language">
