Point to most up to date example

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -276,7 +276,7 @@ pub contract GuestBook uses (ctx: Ctx, mut log: Log) {"{"}
           <ul>
             <li><a class="block py-1 text-gray-400 hover:text-indigo-400 transition-colors" href={`${base}getting-started/installation/`} title="Installation">Installation</a></li>
             <li><a class="block py-1 text-gray-400 hover:text-indigo-400 transition-colors" href={`${base}getting-started/what-is-fe/`} title="Documentation">Documentation</a></li>
-            <li><a class="block py-1 text-gray-400 hover:text-indigo-400 transition-colors" href="https://github.com/fe-lang/fe/tree/master/crates/test-files/fixtures/demos" title="Examples">Examples</a></li>
+            <li><a class="block py-1 text-gray-400 hover:text-indigo-400 transition-colors" href="https://raw.githubusercontent.com/argotorg/fe/57770eb6767344d0820c13dacc05f57fc9b6f2a0/crates/fmt/tests/fixtures/erc20.fe" title="Examples">Examples</a></li>
           </ul>
         </div>
         <div>
