--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,7 +101,7 @@ const base = import.meta.env.BASE_URL;
       </div>
       <div class="text-center px-4 py-12">
         <p class="text-2xl text-gray-800 leading-7">Explore some advanced contracts written in Fe</p>
-        <a class="w-full mt-6 inline-block bg-indigo-600 rounded-lg px-6 py-3 text-lg text-white sm:w-auto hover:bg-indigo-700 transition duration-200 ease-in-out shadow-lg" href="https://github.com/fe-lang/fe/tree/master/crates/test-files/fixtures/demos">See examples &rarr;</a>
+        <a class="w-full mt-6 inline-block bg-indigo-600 rounded-lg px-6 py-3 text-lg text-white sm:w-auto hover:bg-indigo-700 transition duration-200 ease-in-out shadow-lg" href="https://raw.githubusercontent.com/argotorg/fe/57770eb6767344d0820c13dacc05f57fc9b6f2a0/crates/fmt/tests/fixtures/erc20.fe">See examples &rarr;</a>
       </div>
     </section>
 
@@ -248,7 +248,7 @@ pub contract GuestBook uses (ctx: Ctx, mut log: Log) {"{"}
             <h5 class="text-2xl tracking-tight mb-2 font-semibold">Read the docs &rarr;</h5>
             <p class="text-gray-600 leading-5">Learn to write Fe smart contracts</p>
           </a>
-          <a href="https://github.com/fe-lang/fe/tree/master/crates/test-files/fixtures/demos" title="Check examples" class="p-6 bg-gray-50 text-gray-900 rounded-xl hover:bg-indigo-50 hover:border-indigo-200 border border-gray-100 transition-colors">
+          <a href="https://raw.githubusercontent.com/argotorg/fe/57770eb6767344d0820c13dacc05f57fc9b6f2a0/crates/fmt/tests/fixtures/erc20.fe" title="Check examples" class="p-6 bg-gray-50 text-gray-900 rounded-xl hover:bg-indigo-50 hover:border-indigo-200 border border-gray-100 transition-colors">
             <h5 class="text-2xl tracking-tight mb-2 font-semibold">Check examples &rarr;</h5>
             <p class="text-gray-600 leading-5">Explore advanced contracts written in Fe</p>
           </a>
