Change main subtext

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const base = import.meta.env.BASE_URL;
       <img class="h-52 lg:h-72 lg:ml-8 xl:ml-0 hidden sm:block" src={`${base}fe-logo.svg`} alt="Fe Programming language">
       <div class="sm:mt-14 md:ml-16 md:mt-0 max-w-3xl lg:max-w-2xl xl:max-w-3xl xl:-ml-4">
         <h2 class="text-5xl sm:text-6xl xl:text-6xl leading-none font-semibold tracking-tight text-white">The <span class="text-indigo-200">next generation</span><br> smart contract language for Ethereum</h2>
-        <p class="text-lg sm:text-2xl text-indigo-100 leading-6 sm:leading-8 mt-4">Create <span class="text-white font-semibold">decentralized applications</span> in a powerful, future-proof and <span class="text-white font-semibold">statically typed</span> language that is <span class="text-white font-semibold">easy to learn</span>.</p>
+        <p class="text-lg sm:text-2xl text-indigo-100 leading-6 sm:leading-8 mt-4">Rust-inspired. EVM-native. Built for safety.</p>
         <div class="mt-6 sm:mt-8 flex flex-wrap space-y-4 sm:space-y-0 sm:space-x-4 text-center">
           <a href={`${base}getting-started/what-is-fe/`} class="transition duration-200 ease-in-out w-full sm:w-auto text-lg sm:text-xl text-center bg-white rounded-lg text-indigo-700 font-semibold py-3 px-6 hover:bg-indigo-50 shadow-lg" title="Get started">Get started</a>
           <a href="https://github.com/fe-lang/fe/releases" class="w-full sm:w-auto px-6 py-3 bg-indigo-500 text-white border border-indigo-400 rounded-lg hover:bg-indigo-400 leading-6 transition-colors duration-200" title="Download">
