--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,8 +107,8 @@ const base = import.meta.env.BASE_URL;
 
     <section class="max-w-screen-lg xl:max-w-screen-xl mx-auto bg-gradient-to-br from-gray-800 to-gray-900 sm:rounded-xl overflow-hidden shadow-xl">
       <div class="p-4 pt-12 pb-10 lg:pt-16">
-        <h2 class="text-3xl font-semibold text-center tracking-tight mt-1 lg:text-4xl text-white">The next generation smart contract language.</h2>
-        <p class="text-xl mx-auto max-w-3xl text-center mt-6 text-gray-300">Fe is an evolving smart contract language that strives to make EVM development safer, simpler and more fun.</p>
+        <h2 class="text-3xl font-semibold text-center tracking-tight mt-1 lg:text-4xl text-white">True to the machine.</h2>
+        <p class="text-xl mx-auto max-w-3xl text-center mt-6 text-gray-300">Fe embraces the EVM's message-passing reality with explicit effects and modern syntax.</p>
       </div>
       <div class="mx-auto max-w-7xl flex flex-col space-y-8 lg:flex-row lg:justify-around xl:pb-8">
         <div class="grid grid-cols-1 sm:grid-cols-2 space-y-8 sm:space-x-6 px-4 lg:grid-cols-1 lg:space-x-0 lg:max-w-md mt-1">
