--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ const base = import.meta.env.BASE_URL;
         <p class="text-lg sm:text-2xl text-indigo-100 leading-6 sm:leading-8 mt-4">Rust-inspired. EVM-native. Built for safety.</p>
         <div class="mt-6 sm:mt-8 flex flex-wrap space-y-4 sm:space-y-0 sm:space-x-4 text-center">
           <a href={`${base}getting-started/what-is-fe/`} class="transition duration-200 ease-in-out w-full sm:w-auto text-lg sm:text-xl text-center bg-white rounded-lg text-indigo-700 font-semibold py-3 px-6 hover:bg-indigo-50 shadow-lg" title="Get started">Get started</a>
-          <a href="https://github.com/fe-lang/fe/releases" class="w-full sm:w-auto px-6 py-3 bg-indigo-500 text-white border border-indigo-400 rounded-lg hover:bg-indigo-400 leading-6 transition-colors duration-200" title="Download">
+          <a href={`${base}getting-started/installation/`} class="w-full sm:w-auto px-6 py-3 bg-indigo-500 text-white border border-indigo-400 rounded-lg hover:bg-indigo-400 leading-6 transition-colors duration-200" title="Download">
             <svg xmlns="http://www.w3.org/2000/svg" class="float-left h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
             </svg>
