--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -196,7 +196,7 @@ const lineNumbers = Array.from({ length: lineCount }, (_, i) => i + 1).join('\n'
             <h5 class="text-2xl tracking-tight mb-2 font-semibold">See it in action</h5>
             <p class="text-gray-600 leading-5">Real contracts, real code</p>
           </a>
-          <a href="https://github.com/fe-lang/fe" title="Build with us" class="p-6 bg-gray-50 text-gray-900 rounded-xl hover:bg-indigo-50 hover:border-indigo-200 border border-gray-100 transition-colors">
+          <a href="https://github.com/argotorg/fe" title="Build with us" class="p-6 bg-gray-50 text-gray-900 rounded-xl hover:bg-indigo-50 hover:border-indigo-200 border border-gray-100 transition-colors">
             <h5 class="text-2xl tracking-tight mb-2 font-semibold">Build with us</h5>
             <p class="text-gray-600 leading-5">Shape the future of Fe</p>
           </a>
