--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,7 @@ const lineNumbers = Array.from({ length: lineCount }, (_, i) => i + 1).join('\n'
   <meta name="description" content="Fe is a next generation, statically typed, future-proof smart contract language for the Ethereum Virtual Machine">
   <title>Fe - A next generation smart contract language for Ethereum</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="3a2884db-bde9-480f-99b0-d43feee064f9"></script>
 
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
