--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -5,7 +5,7 @@
 
 <div class="sl-banner" data-pagefind-ignore>
 	<strong>Pre-Release:</strong> Fe is under active development. This documentation covers the upcoming release.
-	<a href="https://github.com/fe-lang/fe">Follow progress on GitHub</a>
+	<a href="https://github.com/argotorg/fe">Follow progress on GitHub</a>
 </div>
 
 <style>
