--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -229,7 +229,7 @@ const lineNumbers = Array.from({ length: lineCount }, (_, i) => i + 1).join('\n'
           <ul>
             <li><a class="block py-1 text-gray-400 hover:text-indigo-400 transition-colors" href="https://twitter.com/official_fe" title="Fe on Twitter">Twitter</a></li>
             <li><a class="block py-1 text-gray-400 hover:text-indigo-400 transition-colors" href="https://fe-lang.zulipchat.com/join/dqvssgylulrmjmp2dx7vcbrq" title="Fe on Zulip">Zulip</a></li>
-            <li><a class="block py-1 text-gray-400 hover:text-indigo-400 transition-colors" href="https://github.com/fe-lang/fe" title="Fe on GitHub">GitHub</a></li>
+            <li><a class="block py-1 text-gray-400 hover:text-indigo-400 transition-colors" href="https://github.com/argotorg/fe" title="Fe on GitHub">GitHub</a></li>
           </ul>
         </div>
         <div>
